RESOLVED FIXED114993
branchAdd32 missing implementation in SH4 base JIT
https://bugs.webkit.org/show_bug.cgi?id=114993
Summary branchAdd32 missing implementation in SH4 base JIT
Julien Brianceau
Reported 2013-04-22 15:09:01 PDT
The following function prototype is missing in SH4 base JIT: Jump branchAdd32(ResultCondition, TrustedImm32, AbsoluteAddress) This function is needed since r148893.
Attachments
branchAdd32 missing implementation in SH4 base JIT (2.59 KB, patch)
2013-04-22 15:16 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-04-22 15:16:33 PDT
Created attachment 199116 [details] branchAdd32 missing implementation in SH4 base JIT
WebKit Commit Bot
Comment 2 2013-04-22 16:24:31 PDT
Comment on attachment 199116 [details] branchAdd32 missing implementation in SH4 base JIT Clearing flags on attachment: 199116 Committed r148926: <http://trac.webkit.org/changeset/148926>
WebKit Commit Bot
Comment 3 2013-04-22 16:24:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.