Add branchAdd32 missing implementation in SH4 base JIT. This should fix SH4 build, broken since r148893. https://bugs.webkit.org/show_bug.cgi?id=114993.

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-04-22
Reviewed by Oliver Hunt.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchAdd32):
(MacroAssemblerSH4):

Canonical link: https://commits.webkit.org/133427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148926 268f45cc-cd09-0410-ab3c-d52691b4dbfc